# Financial-Model

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  packages.txt  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
apps/web/: next.config.js  package.json  tailwind.config.ts  vercel.json  vitest.config.ts
core/: __init__.py  storage.py
core/providers/: __init__.py  adapter.py  anthropic_provider.py  audit.py  base.py  google_provider.py  guards.py  openai_provider.py  registry.py
docs/: CLOUD_SETUP_GUIDE.md  MIGRATION.md  agent-teams-current-vs-ideal.md  bug-analysis-3days.md  fam-source-cache.md  speed-optimization-plan.md
docs/llm-pdca/: README.md  evaluation-criteria.md  workflow.md
docs/plans/: 2026-03-14-api-bootstrap-dashboard-error-design.md
infra/: docker-compose.yml  init.sql
public/: index.html
remotion/: package-lock.json  package.json  remotion.config.ts
remotion/src/: IntCM.tsx  Root.tsx
scripts/: check_deploy_compat.py  create_sample_template.py  smoke_test_api.sh
services/api/: Dockerfile  render.yaml  requirements.txt
services/worker/: Dockerfile  celery_app.py  requirements.txt
shared/: __init__.py
shared/schemas/: __init__.py  documents.py  export.py  jobs.py  phases.py  projects.py  recalc.py
src/agents/: business_model_analyzer.py  fm_designer.py  (+5 more)
templates/: base.xlsx  worst.xlsx
tests/: conftest.py  test_agents.py  test_api_e2e.py  test_app_startup.py  test_canonical_adapters.py  test_case_generator.py  test_catalog.py  test_config.py  test_excel_writer.py  test_ingest.py  test_normalizer.py  test_phased_agents.py  test_validator.py
(+200 files in other folders)
